[gd_scene load_steps=12 format=3 uid="uid://bl5s3lwbfhm6g"]

[ext_resource type="Texture2D" uid="uid://d4d1c3301bmor" path="res://ressources/assets/sprite/shop_anim.png" id="1_b85hi"]
[ext_resource type="Script" path="res://scripts/props/shop.gd" id="2_xavqx"]
[ext_resource type="PackedScene" uid="uid://bv60ljro0i1uk" path="res://scenes/interaction/interaction area/interaction_area.tscn" id="3_g0bct"]
[ext_resource type="Theme" uid="uid://duvsd7ylqvfdg" path="res://ressources/themes/default_theme.tres" id="4_joygq"]
[ext_resource type="FontFile" uid="uid://cokxfsrucfycg" path="res://ressources/fonts/monogram.ttf" id="5_ct2ip"]

[sub_resource type="Animation" id="Animation_5was2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_b85hi")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xpmla"]
resource_name = "shop_idle"
length = 0.55
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_b85hi")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jtxop"]
_data = {
"RESET": SubResource("Animation_5was2"),
"shop_idle": SubResource("Animation_xpmla")
}

[sub_resource type="Gradient" id="Gradient_keodj"]
offsets = PackedFloat32Array(0, 0.711191)
colors = PackedColorArray(1, 1, 1, 1, 0.0252708, 0.0252708, 0.0252708, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k8f6f"]
gradient = SubResource("Gradient_keodj")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mtvn5"]
size = Vector2(64.624, 49.5822)

[node name="shop" type="Sprite2D"]
texture_filter = 1
scale = Vector2(1.795, 1.795)
texture = ExtResource("1_b85hi")
hframes = 6
script = ExtResource("2_xavqx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "shop_idle"
libraries = {
"": SubResource("AnimationLibrary_jtxop")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-47.9108, 33.9833)
color = Color(0.960784, 0.431373, 0.203922, 1)
energy = 1.5
texture = SubResource("GradientTexture2D_k8f6f")

[node name="PointLight2D" type="PointLight2D" parent="PointLight2D"]
position = Vector2(98.0501, 1.67131)
color = Color(0.960784, 0.431373, 0.203922, 1)
energy = 1.5
texture = SubResource("GradientTexture2D_k8f6f")

[node name="InteractionArea" parent="." instance=ExtResource("3_g0bct")]
position = Vector2(3.89972, -25.6267)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(5.96046e-07, 63.5098)
shape = SubResource("RectangleShape2D_mtvn5")

[node name="ShopMenu" type="CanvasLayer" parent="."]
visible = false

[node name="Credits" type="Control" parent="ShopMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DarkBg" type="Panel" parent="ShopMenu/Credits"]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ShopMenu/Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="ShopMenu/Credits/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="ShopMenu/Credits/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_ct2ip")
text = "W.I.P."

[node name="BackButton" type="Button" parent="ShopMenu/Credits/MarginContainer/HBoxContainer" groups=["menu_button"]]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_joygq")
text = "Close"

[connection signal="pressed" from="ShopMenu/Credits/MarginContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
